# robot-routing

./: APPENDIX.md  CMakeLists.txt  CMakeLists.txt.in  INSTRUCTIONS.md  README.md  main.cpp  routing_problem.cpp  routing_problem.hpp  solver.cpp  test.cpp  utils.cpp  utils.hpp
large_problems/: problem_100.txt  problem_1000.txt  problem_10000.txt
problem2/: solution.txt
problem3/: solution.txt
problem4/: solution.txt
sample/: problem.txt  solution.txt
solver/: CMakeLists.txt  routing_problem.cpp  routing_problem.hpp  solver.cpp  test.cpp  utils.cpp  utils.hpp
unsolvable/: problem.txt
